[package]
name = "music-application"
version = "0.1.0"
authors = ["Brian Milton <harlanbmiltonjr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
glob = "0.3.0"
winapi = {version = "0.3", features = ["wincon", "winuser"]}
